k8s/aggregator/development/config-volume-mount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-deployment
spec:
  template:
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: config-toml
      containers:
        - name: aggregator
          volumeMounts:
            mountPath: /bin/config.toml
            name: config-volume
