k8s/aggregator/development/history-limit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-deployment
spec:
  revisionHistoryLimit: 5
