k8s/aggregator/development/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aggregator-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - dev-aggregator.xayn.com
      secretName: dev-aggregator
  rules:
    - host: dev-aggregator.xayn.com
      http:
        paths:
          - path: /
            backend:
              serviceName: aggregator-service
              servicePort: 8082
